@@ -1,0 +1,121 @@
+return
+{
+  entities =
+  {
+    {"kr-bio-lab", {x = -3.5, y = -3.5}, {}},
+    {"pipe-to-ground", {x = 3.5, y = -6.5}, {dead = 0.2}},
+    {"pipe", {x = -3.5, y = 1.5}, {dead = 0.4}},
+    {"pipe", {x = -3.5, y = 0.5}, {dead = 0.4}},
+    {"kr-bio-lab", {x = 3.5, y = 4.5}, {dir = "south", }},
+    {"pipe-to-ground", {x = 3.5, y = 0.5}, {dir = "south", dead = 0.2}},
+    {"pipe", {x = -5.5, y = 2.5}, {dead = 0.4}},
+    {"pipe", {x = -4.5, y = 2.5}, {dead = 0.4}},
+    {"pipe", {x = -3.5, y = 2.5}, {dead = 0.4}},
+    {"pipe", {x = -3.5, y = 3.5}, {dead = 0.4}},
+    {"pipe", {x = -6.5, y = 5.5}, {dead = 0.4}},
+    {"pipe", {x = -3.5, y = 4.5}, {dead = 0.4}},
+    {"pipe", {x = -2.5, y = 4.5}, {dead = 0.4}},
+    {"pipe", {x = -1.5, y = 4.5}, {dead = 0.4}},
+    {"pipe", {x = -0.5, y = 4.5}, {dead = 0.4}},
+    {"pipe", {x = -6.5, y = 6.5}, {dead = 0.4}},
+    {"pipe", {x = -5.5, y = 6.5}, {dead = 0.4}},
+  },
+  tiles =
+  {
+    {"kr-creep", {x = -5, y = -1}},
+    {"kr-creep", {x = -5, y = 0}},
+    {"kr-creep", {x = -5, y = 1}},
+    {"kr-creep", {x = -5, y = 2}},
+    {"kr-creep", {x = -5, y = 3}},
+    {"kr-creep", {x = -5, y = 4}},
+    {"kr-creep", {x = -4, y = -1}},
+    {"kr-creep", {x = -4, y = 0}},
+    {"kr-creep", {x = -4, y = 1}},
+    {"kr-creep", {x = -4, y = 2}},
+    {"kr-creep", {x = -4, y = 3}},
+    {"kr-creep", {x = -4, y = 4}},
+    {"kr-creep", {x = -3, y = -5}},
+    {"kr-creep", {x = -3, y = -4}},
+    {"kr-creep", {x = -3, y = -3}},
+    {"kr-creep", {x = -3, y = -2}},
+    {"kr-creep", {x = -3, y = -1}},
+    {"kr-creep", {x = -3, y = 0}},
+    {"kr-creep", {x = -3, y = 1}},
+    {"kr-creep", {x = -3, y = 2}},
+    {"kr-creep", {x = -3, y = 3}},
+    {"kr-creep", {x = -3, y = 4}},
+    {"kr-creep", {x = -3, y = 5}},
+    {"kr-creep", {x = -2, y = -5}},
+    {"kr-creep", {x = -2, y = -4}},
+    {"kr-creep", {x = -2, y = -3}},
+    {"kr-creep", {x = -2, y = -2}},
+    {"kr-creep", {x = -2, y = -1}},
+    {"kr-creep", {x = -2, y = 0}},
+    {"kr-creep", {x = -2, y = 1}},
+    {"kr-creep", {x = -2, y = 2}},
+    {"kr-creep", {x = -2, y = 3}},
+    {"kr-creep", {x = -2, y = 4}},
+    {"kr-creep", {x = -2, y = 5}},
+    {"kr-creep", {x = -1, y = -5}},
+    {"kr-creep", {x = -1, y = -4}},
+    {"kr-creep", {x = -1, y = -3}},
+    {"kr-creep", {x = -1, y = -2}},
+    {"kr-creep", {x = -1, y = 0}},
+    {"kr-creep", {x = -1, y = 1}},
+    {"kr-creep", {x = -1, y = 2}},
+    {"kr-creep", {x = -1, y = 3}},
+    {"kr-creep", {x = -1, y = 4}},
+    {"kr-creep", {x = -1, y = 5}},
+    {"kr-creep", {x = 0, y = -5}},
+    {"kr-creep", {x = 0, y = -4}},
+    {"kr-creep", {x = 0, y = -3}},
+    {"kr-creep", {x = 0, y = -2}},
+    {"kr-creep", {x = 0, y = 0}},
+    {"kr-creep", {x = 0, y = 1}},
+    {"kr-creep", {x = 0, y = 2}},
+    {"kr-creep", {x = 0, y = 3}},
+    {"kr-creep", {x = 0, y = 4}},
+    {"kr-creep", {x = 0, y = 5}},
+    {"kr-creep", {x = 1, y = -5}},
+    {"kr-creep", {x = 1, y = -4}},
+    {"kr-creep", {x = 1, y = -3}},
+    {"kr-creep", {x = 1, y = -2}},
+    {"kr-creep", {x = 1, y = -1}},
+    {"kr-creep", {x = 1, y = 0}},
+    {"kr-creep", {x = 1, y = 1}},
+    {"kr-creep", {x = 1, y = 2}},
+    {"kr-creep", {x = 1, y = 3}},
+    {"kr-creep", {x = 1, y = 4}},
+    {"kr-creep", {x = 1, y = 5}},
+    {"kr-creep", {x = 2, y = -5}},
+    {"kr-creep", {x = 2, y = -4}},
+    {"kr-creep", {x = 2, y = -3}},
+    {"kr-creep", {x = 2, y = -2}},
+    {"kr-creep", {x = 2, y = -1}},
+    {"kr-creep", {x = 2, y = 0}},
+    {"kr-creep", {x = 2, y = 1}},
+    {"kr-creep", {x = 2, y = 2}},
+    {"kr-creep", {x = 2, y = 3}},
+    {"kr-creep", {x = 3, y = -5}},
+    {"kr-creep", {x = 3, y = -4}},
+    {"kr-creep", {x = 3, y = -3}},
+    {"kr-creep", {x = 3, y = -2}},
+    {"kr-creep", {x = 3, y = -1}},
+    {"kr-creep", {x = 3, y = 0}},
+    {"kr-creep", {x = 3, y = 1}},
+    {"kr-creep", {x = 3, y = 2}},
+    {"kr-creep", {x = 3, y = 3}},
+    {"kr-creep", {x = 4, y = -4}},
+    {"kr-creep", {x = 4, y = -3}},
+    {"kr-creep", {x = 4, y = -2}},
+    {"kr-creep", {x = 4, y = -1}},
+    {"kr-creep", {x = 4, y = 0}},
+    {"kr-creep", {x = 4, y = 1}},
+    {"kr-creep", {x = 4, y = 2}},
+    {"kr-creep", {x = 4, y = 3}},
+    {"kr-creep", {x = 5, y = -3}},
+    {"kr-creep", {x = 5, y = -2}},
+    {"kr-creep", {x = 5, y = -1}},
+    {"kr-creep", {x = 5, y = 0}},
+  }
+}
