@@ -1,0 +1,61 @@
+return
+{
+  entities =
+  {
+    {"small-electric-pole", {x = -4.5, y = -6.5}, {dead = 0.3}},
+    {"inserter", {x = -3.5, y = -6.5}, {dead = 0.3}},
+    {"transport-belt", {x = -3.5, y = -7.5}, {dir = "west", dead = 0.3}},
+    {"transport-belt", {x = -2.5, y = -7.5}, {dir = "west", dead = 0.3}},
+    {"transport-belt", {x = -1.5, y = -7.5}, {dir = "west", dead = 0.3}},
+    {"transport-belt", {x = -0.5, y = -7.5}, {dir = "west", dead = 0.3}},
+    {"transport-belt", {x = 0.5, y = -7.5}, {dir = "west", dead = 0.3}},
+    {"transport-belt", {x = 1.5, y = -7.5}, {dir = "west", dead = 0.3}},
+    {"small-electric-pole", {x = 1.5, y = -6.5}, {dead = 0.3}},
+    {"transport-belt", {x = 2.5, y = -7.5}, {dir = "west", dead = 0.3}},
+    {"transport-belt", {x = 3.5, y = -7.5}, {dir = "west", dead = 0.3}},
+    {"transport-belt", {x = 4.5, y = -7.5}, {dir = "west", dead = 0.3}},
+    {"transport-belt", {x = 4.5, y = -6.5}, {dead = 0.3}},
+    {"kr-medium-container", {x = -4, y = -5}, {items = {fuel = {type = "random", min = 30, max = 80}}, }},
+    {"kr-fuel-refinery", {x = 0.5, y = -4.5}, {dir = "west", }},
+    {"pipe", {x = -1.5, y = -4.5}, {dead = 0.4}},
+    {"pipe", {x = -1.5, y = -5.5}, {dead = 0.4}},
+    {"long-handed-inserter", {x = 2.5, y = -5.5}, {dir = "west", dead = 0.3}},
+    {"transport-belt", {x = 4.5, y = -5.5}, {dead = 0.3}},
+    {"transport-belt", {x = 4.5, y = -4.5}, {dead = 0.3}},
+    {"pipe-to-ground", {x = -0.5, y = -2.5}, {dir = "west", dead = 0.3}},
+    {"pipe", {x = -1.5, y = -2.5}, {dead = 0.4}},
+    {"pipe", {x = -1.5, y = -3.5}, {dead = 0.4}},
+    {"small-electric-pole", {x = 1.5, y = -2.5}, {dead = 0.3}},
+    {"transport-belt", {x = 4.5, y = -3.5}, {dead = 0.3}},
+    {"transport-belt", {x = 4.5, y = -2.5}, {dead = 0.3}},
+    {"pipe-to-ground", {x = 6.5, y = -2.5}, {dir = "east", dead = 0.3}},
+    {"pipe", {x = -5.5, y = -1.5}, {dead = 0.4}},
+    {"storage-tank", {x = -4.5, y = 0.5}, {dead = 0.1}},
+    {"pipe", {x = -4.5, y = -1.5}, {dead = 0.4}},
+    {"pipe", {x = -2.5, y = -1.5}, {dead = 0.4}},
+    {"pipe", {x = -3.5, y = -1.5}, {dead = 0.4}},
+    {"kr-fuel-refinery", {x = 0.5, y = -0.5}, {dir = "west", }},
+    {"pipe", {x = -1.5, y = -0.5}, {dead = 0.4}},
+    {"pipe", {x = -1.5, y = -1.5}, {dead = 0.4}},
+    {"transport-belt", {x = 4.5, y = -1.5}, {dead = 0.3}},
+    {"transport-belt", {x = 4.5, y = -0.5}, {dead = 0.3}},
+    {"pipe", {x = -1.5, y = 1.5}, {dead = 0.4}},
+    {"pipe", {x = -1.5, y = 0.5}, {dead = 0.4}},
+    {"small-electric-pole", {x = 1.5, y = 1.5}, {dead = 0.3}},
+    {"long-handed-inserter", {x = 2.5, y = 0.5}, {dir = "west", dead = 0.3}},
+    {"transport-belt", {x = 4.5, y = 0.5}, {dead = 0.3}},
+    {"transport-belt", {x = 4.5, y = 1.5}, {dead = 0.3}},
+    {"pipe", {x = -3.5, y = 3.5}, {dead = 0.4}},
+    {"pipe", {x = -3.5, y = 2.5}, {dead = 0.4}},
+    {"kr-fuel-refinery", {x = 0.5, y = 3.5}, {dir = "west", }},
+    {"pipe", {x = -1.5, y = 2.5}, {dead = 0.4}},
+    {"long-handed-inserter", {x = 2.5, y = 2.5}, {dir = "west", dead = 0.3}},
+    {"transport-belt", {x = 4.5, y = 2.5}, {dead = 0.3}},
+    {"transport-belt", {x = 4.5, y = 3.5}, {dead = 0.3}},
+    {"pipe", {x = -4.5, y = 5.5}, {dead = 0.4}},
+    {"pipe", {x = -5.5, y = 5.5}, {dead = 0.4}},
+    {"pipe", {x = -3.5, y = 5.5}, {dead = 0.4}},
+    {"transport-belt", {x = 4.5, y = 5.5}, {dead = 0.3}},
+    {"transport-belt", {x = 4.5, y = 4.5}, {dead = 0.3}},
+  },
+}
