@@ -1,0 +1,14 @@
+return
+{
+  entities =
+  {
+    {"kr-fluid-burner", {x = 2, y = -3}, {}},
+    {"storage-tank", {x = -1.5, y = 0.5}, {dmg = {dmg = {type = "random", min = 0, max = 200}}}},
+    {"medium-electric-pole", {x = 0.5, y = -1.5}, {dead = 0.3}},
+    {"pipe", {x = 2.5, y = -0.5}, {dmg = {dmg = {type = "random", min = 0, max = 200}}}},
+    {"pipe", {x = 2.5, y = -1.5}, {dmg = {dmg = {type = "random", min = 0, max = 200}}}},
+    {"pump", {x = 1, y = 1.5}, {dir = "east", dmg = {dmg = {type = "random", min = 0, max = 40}}}},
+    {"pipe", {x = 2.5, y = 1.5}, {dmg = {dmg = {type = "random", min = 0, max = 200}}}},
+    {"pipe", {x = 2.5, y = 0.5}, {dmg = {dmg = {type = "random", min = 0, max = 200}}}},
+  },
+}
