@@ -1,0 +1,36 @@
+return
+{
+  entities =
+  {
+    {"small-electric-pole-remnants", {x = -1.5, y = -2.5}, {}},
+    {"kr-sentinel", {x = 1.5, y = -1.5}, {dmg = {dmg = {type = "random", min = 0, max = 20}}}},
+    {"small-electric-pole", {x = 2.5, y = -1.5}, {dmg = {dmg = {type = "random", min = 0, max = 4}}}},
+    {"kr-sentinel", {x = -2.5, y = 1.5}, {dmg = {dmg = {type = "random", min = 0, max = 20}}}},
+    {"wooden-chest", {x = 0.5, y = 1.5}, {items = {["firearm-magazine"] = {type = "random", min = 10, max = 40}}, dmg = {dmg = {type = "random", min = 0, max = 40}}}},
+    {"small-electric-pole", {x = -1.5, y = 2.5}, {}},
+  },
+  tiles =
+  {
+    {"stone-path", {x = -4, y = -2}},
+    {"stone-path", {x = -4, y = 0}},
+    {"stone-path", {x = -4, y = 1}},
+    {"stone-path", {x = -3, y = -4}},
+    {"stone-path", {x = -3, y = -2}},
+    {"stone-path", {x = -3, y = 0}},
+    {"stone-path", {x = -3, y = 1}},
+    {"stone-path", {x = -3, y = 2}},
+    {"stone-path", {x = -2, y = -4}},
+    {"stone-path", {x = -2, y = -3}},
+    {"stone-path", {x = -2, y = 0}},
+    {"stone-path", {x = -2, y = 1}},
+    {"stone-path", {x = -2, y = 2}},
+    {"stone-path", {x = 0, y = -2}},
+    {"stone-path", {x = 0, y = -1}},
+    {"stone-path", {x = 1, y = -3}},
+    {"stone-path", {x = 1, y = -2}},
+    {"stone-path", {x = 1, y = -1}},
+    {"stone-path", {x = 2, y = -3}},
+    {"stone-path", {x = 2, y = -2}},
+    {"stone-path", {x = 2, y = -1}},
+  }
+}
