@@ -2,6 +2,7 @@
 Version: 0.1.1
 Date: ????
   Changes:
+    - Added more ruins.
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 2020-09-23
